force-app/main/default/objects/Program__c/fields/Alias_Rounds__c.field-meta.xml
<CustomField>
    <fullName>Alias_Rounds__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this organization is not an active member, but is holding Schwartz Rounds and calling them something else. If you check this box, please add an Alias Rounds note with details.</inlineHelpText>
    <label>Alias Rounds</label>
    <type>Checkbox</type>
</CustomField>