force-app/main/default/objects/Program__c/fields/CEU_Credits_Offered__c.field-meta.xml
<CustomField>
    <fullName>CEU_Credits_Offered__c</fullName>
    <label>CEU Credits Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>