force-app/main/default/objects/Program__c/fields/CME_Credits_Offered__c.field-meta.xml
<CustomField>
    <fullName>CME_Credits_Offered__c</fullName>
    <label>CME Credits Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not now but possibly in the future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>