force-app/main/default/objects/Program__c/fields/Exemplary_Rounds_Program__c.field-meta.xml
<CustomField>
    <fullName>Exemplary_Rounds_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to indicate that a member has an exemplary Rounds program and might be a good choice for visitors or new members to observe.</description>
    <inlineHelpText>Check this box to indicate that a member has an exemplary Rounds program and might be a good choice for visitors or new members to observe.</inlineHelpText>
    <label>Exemplary Rounds Program</label>
    <type>Checkbox</type>
</CustomField>