force-app/main/default/objects/Program__c/fields/First_Rounds_Session__c.field-meta.xml
<CustomField>
    <fullName>First_Rounds_Session__c</fullName>
    <inlineHelpText>If exact date is unknown, 1/1/1900 may be used as a placeholder to filter this account out of active reporting.</inlineHelpText>
    <label>First Rounds Session</label>
    <type>Date</type>
</CustomField>