force-app/main/default/objects/Program__c/fields/Last_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Last_Evaluation__c</fullName>
    <inlineHelpText>Data from Neon; this is a static field and will be deleted once all Rounds evaluations have been moved to Rounds Sessions. &quot;Last Rounds Session&quot; is more accurate unless it is blank.</inlineHelpText>
    <label>Last Evaluation</label>
    <type>Date</type>
</CustomField>