force-app/main/default/objects/Program__c/fields/Last_Rounds_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Rounds_Session__c</fullName>
    <inlineHelpText>The most recent Rounds session for which we have received an evaluation. Data is auto-populated from the Rounds Session object. If blank, see the &quot;Last Evaluation&quot; field.</inlineHelpText>
    <label>Last Rounds Session</label>
    <summarizedField>Rounds_Session__c.Session_Date__c</summarizedField>
    <summaryForeignKey>Rounds_Session__c.Programs__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>