force-app/main/default/objects/Program__c/fields/Multiple_Locations_UTR__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Locations_UTR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Not a Rotating or MultiSite Member, but conducts Rounds at more than one location (UTR=under the radar).</inlineHelpText>
    <label>Multiple Locations (UTR)</label>
    <type>Checkbox</type>
</CustomField>