force-app/main/default/objects/Program__c/fields/Other_Unit__c.field-meta.xml
<CustomField>
    <fullName>Other_Unit__c</fullName>
    <label>Other Unit:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>