force-app/main/default/objects/Program__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>The Schwartz Rounds</fullName>
            </value>
            <value>
                <fullName>The Healing Healthcare Initiative (HHI)</fullName>
            </value>
            <value>
                <fullName>Stress first aid (SFA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>