force-app/main/default/objects/Program__c/fields/Rounds_Archive_Complete__c.field-meta.xml
<CustomField>
    <fullName>Rounds_Archive_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rounds Archive Complete</label>
    <type>Checkbox</type>
</CustomField>