force-app/main/default/objects/Program__c/fields/Rounds_Held_in_Cancer_Center__c.field-meta.xml
<CustomField>
    <fullName>Rounds_Held_in_Cancer_Center__c</fullName>
    <label>Rounds Held in Cancer Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>