force-app/main/default/objects/Program__c/fields/Rounds_Sessions_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Rounds_Sessions_Per_Year__c</fullName>
    <inlineHelpText>The number of Rounds sessions a member plans to hold each year. The Schwartz Center generally requires a minimum of six, but makes exceptions for some members.</inlineHelpText>
    <label>Rounds Sessions Per Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>