force-app/main/default/objects/Program__c/fields/Schwartz_Rounds_Info__c.field-meta.xml
<CustomField>
    <fullName>Schwartz_Rounds_Info__c</fullName>
    <inlineHelpText>Link to the page on the member&apos;s website that has information about Schwartz Rounds.</inlineHelpText>
    <label>Schwartz Rounds Info</label>
    <type>Url</type>
</CustomField>