force-app/main/default/objects/Program__c/fields/Total_No_of_Rounds_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Rounds_Sessions__c</fullName>
    <inlineHelpText>Count of all rounds sessions related to this program.</inlineHelpText>
    <label>Total No. of Rounds Sessions</label>
    <summaryForeignKey>Rounds_Session__c.Programs__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>