force-app/main/default/objects/Program__c/fields/UBSR_Pilot_Site__c.field-meta.xml
<CustomField>
    <fullName>UBSR_Pilot_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UBSR Pilot Site</label>
    <type>Checkbox</type>
</CustomField>