force-app/main/default/objects/Program__c/fields/UBSR_Unit_s__c.field-meta.xml
<CustomField>
    <fullName>UBSR_Unit_s__c</fullName>
    <label>UBSR Unit(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancer Center / Oncology</fullName>
            </value>
            <value>
                <fullName>Cardiac Care / CICU</fullName>
            </value>
            <value>
                <fullName>Emergency Department</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>Intensive Care Unit (ICU)</fullName>
            </value>
            <value>
                <fullName>Labor and Delivery</fullName>
            </value>
            <value>
                <fullName>Pediatric Intensive Care (PICU)</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Neonatal Intensive Care (NICU)</fullName>
            </value>
            <value>
                <fullName>Transplant Unit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>